--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -7,17 +7,37 @@
     android:orientation="vertical"
     android:padding="@dimen/vs_30">
 
-    <TextView
-        android:layout_width="@dimen/vs_600"
+	<LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lineSpacingExtra="@dimen/ts_50"
-        android:lineSpacingMultiplier="0"
-        android:shadowColor="@color/color_000000_60"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="3"
-        android:text="@string/dia_about"
-        android:textColor="@color/color_FFFFFF"
-        android:textSize="@dimen/ts_24" />
+        android:gravity="left"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="打包时间："
+            android:textColor="@color/color_FFFFFF"
+            android:textSize="@dimen/ts_22" />
+        <TextView
+            android:id="@+id/app_version"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_FFFFFF"
+            android:textSize="@dimen/ts_22" />
+</LinearLayout>
+	
+        <TextView
+            android:layout_width="@dimen/vs_600"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="@dimen/ts_20"
+            android:lineSpacingMultiplier="0.3"
+            android:shadowColor="@color/color_000000_60"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="3"
+            android:text="@string/dia_about"
+            android:textColor="@color/color_FFFFFF"
+            android:textSize="@dimen/ts_22" />
 
 </LinearLayout>
