--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -13,30 +13,46 @@
         android:gravity="left"
         android:orientation="horizontal" >
 
-        <TextView
+		<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="打包时间："
-            android:textColor="@color/color_FFFFFF"
+			android:textColor="@color/color_FFFFFF"
             android:textSize="@dimen/ts_22" />
-        <TextView
+		<TextView
             android:id="@+id/app_version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_FFFFFF"
             android:textSize="@dimen/ts_22" />
-</LinearLayout>
+    </LinearLayout>
 	
-        <TextView
-            android:layout_width="@dimen/vs_600"
+		<TextView
+			android:layout_width="@dimen/vs_600"
+			android:layout_height="wrap_content"
+			android:lineSpacingExtra="@dimen/ts_20"
+			android:lineSpacingMultiplier="0.3"
+			android:shadowColor="@color/color_000000_60"
+			android:shadowDx="0"
+			android:shadowDy="0"
+			android:shadowRadius="3"
+			android:text="@string/dia_about"
+			android:textColor="@color/color_FFFFFF"
+			android:textSize="@dimen/ts_22" />
+			
+		<TextView
+			android:id="@+id/xupdate"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:lineSpacingExtra="@dimen/ts_20"
-            android:lineSpacingMultiplier="0.3"
-            android:shadowColor="@color/color_000000_60"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="3"
-            android:text="@string/dia_about"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/vs_5"
+            android:layout_marginLeft="@dimen/vs_5"
+            android:layout_weight="1"
+            android:background="@drawable/button_dialog_main"
+            android:focusable="true"
+            android:gravity="center"
+            android:padding="@dimen/vs_10"
+            android:text="系统更新"
             android:textColor="@color/color_FFFFFF"
             android:textSize="@dimen/ts_22" />
 
